<resources>
    <string name="app_name">Essteling</string>
    <string name="homepage_scoreboard_subtitle_format">Test</string>
    <string name="dummy" translatable="false">Dummy</string>
    <string name="homepage_nearby_attractions">Nearby Attractions</string>
    <string name="homepage_nearby_non_found">Nothing nearby found</string>
    <string name="title_activity_main">Essteling Games</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="activity_about_maintext">This app is developed for themepark \"De Essteling\". The goal of this application is to entertain people in the queue of the rides. There is also an option to bring information about queue times etc.</string>
    <string name="activity_about_creatortext">Created by : B3</string>
    <string name="activity_about_versiontext" translatable="false">v1.0-beta</string>
    <string name="detail_best_of_day">Best of Day</string>
    <string name="detail_best_of_week">Best of Week</string>
    <string name="detail_best_of_year">Best of Year</string>
    <string name="detail_best_overall">Best of All time</string>
    <string name="essteling_games">Essteling Games</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="wifi_switch">Use WIFI only</string>
    <string name="language">Language</string>
    <string name="play">Play</string>

    <string name="faq_q_launchGame">How can I launch a game?</string>
    <string name="faq_a_launchGame">
        You can launch games from the home-menu. Once your device is connected to a specific
        attraction, it will appear under "nearby attractions". If you tap the name of the attraction
        or the big purple "play" button next to it, the game will launch. This app connects to
        attractions with Bluetooth, so make sure Bluetooth is enabled.
    </string>
    <string name="faq_q_viewHighscore">Where can I view my highscore?</string>
    <string name="faq_a_viewHighscore">
        You can see your highscore in the game-over screen of a game.
    </string>
    <string name="faq_q_controlsAnaconda">
        How does the game of Anaconda work?
    </string>
    <string name="faq_a_controlsAnaconda">
        In Anaconda you play as a snake with gold fever. The aim of the game is eating as many
        gold coins as possible. The snake will get longer every time you eat a coin.
        If you want the snake to go in a certain direction, simply swipe in that direction.
        The snake is also able to leave the playing field. It will return from the opposite side.
    </string>
    <string name="faq_q_viewRideScores">
        Where can I see the scores of a specific attraction?
    </string>
    <string name="faq_a_viewRideScores">
        There is a tab called "Attractions" in the navigation menu. This will bring you to
        a list of attractions. You can view the scores of an attraction
        by tapping on that attraction.
    </string>

    <string name="home">Home</string>
    <string name="attraction">Attractions</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>

    <string name="dif">Difficulty</string>

    <string name="network">Network</string>
    <string name="name">Name</string>
    <string name="current">Current:</string>
    <string name="Change">Change</string>
    <string name="Apply">Apply</string>


    <string-array name="country_arrays">
        <item>English</item>
        <item>Dutch</item>
    </string-array>

    <string-array name="moeilijkheid">
        <item>Child</item>
        <item>Teenager</item>
        <item>Adult</item>
    </string-array>
    <string name="name_size_is_too_damm_high">Maximum name size =15</string>
    <string name="name_dialog_title">Please input your name</string>
    <string name="name_warning_bad_word">That name is not accepted</string>
    <string name="loading">loading</string>
    <string name="anaconda_start_game">Start game</string>
    <string name="anaconda_score">score</string>
    <string name="anaconda_game_over">Game over</string>
    <string name="anaconda_try_again">Try again</string>
    <string name="anaconda_go_back">Go back</string>
</resources>
