<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="@dimen/nav_header_height"
                                             android:background="@color/colorPrimary"
                                             android:gravity="bottom"
                                             android:orientation="vertical"
                                             android:theme="@style/AppTheme">

    <ImageView
        android:id="@+id/menu_logo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/menu_titel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"/>

    <TextView
        android:id="@+id/menu_titel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/essteling_games"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_ondertitel"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/menu_ondertitel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/navigation_menu"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
